--- a/TheMovieApp/Features/Main.storyboard
+++ b/TheMovieApp/Features/Main.storyboard
@@ -16,8 +16,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <searchBar contentMode="redraw" placeholder="Type your movie name here..." translatesAutoresizingMaskIntoConstraints="NO" id="ha0-gl-5QG">
+                                <rect key="frame" x="0.0" y="88" width="414" height="51"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                            </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pRK-0U-Tcd">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <rect key="frame" x="0.0" y="139" width="414" height="674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="FnB-YB-qXf">
                                     <size key="itemSize" width="128" height="128"/>
@@ -25,40 +29,76 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
+                                <label key="backgroundView" hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ec0-by-2Bu">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="674"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" systemColor="tertiaryLabelColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                                 <cells/>
                             </collectionView>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="ha0-gl-5QG">
-                                <rect key="frame" x="0.0" y="44" width="414" height="51"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="pRK-0U-Tcd" firstAttribute="top" secondItem="ha0-gl-5QG" secondAttribute="bottom" id="2SN-mo-rXS"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="pRK-0U-Tcd" secondAttribute="trailing" id="8jA-BI-OSa"/>
                             <constraint firstItem="ha0-gl-5QG" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="NcP-cE-yCg"/>
                             <constraint firstItem="ha0-gl-5QG" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="QMQ-iL-37C"/>
-                            <constraint firstItem="pRK-0U-Tcd" firstAttribute="top" secondItem="ha0-gl-5QG" secondAttribute="top" id="Sks-qk-34r"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="pRK-0U-Tcd" secondAttribute="bottom" id="h5M-77-o1e"/>
                             <constraint firstItem="pRK-0U-Tcd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="lmc-Kb-bFs"/>
                             <constraint firstItem="ha0-gl-5QG" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="wrK-al-2bc"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="6bB-AI-cb1">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="pvV-A1-ven">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="zFH-8G-YlI">
+                                <rect key="frame" x="20" y="5" width="92" height="34.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="btnArchive" destination="zFH-8G-YlI" id="Ylo-KG-ivM"/>
                         <outlet property="collectionView" destination="pRK-0U-Tcd" id="dKT-iS-Jak"/>
+                        <outlet property="lblNotice" destination="ec0-by-2Bu" id="Bi4-Sh-Qa9"/>
                         <outlet property="searchBar" destination="ha0-gl-5QG" id="fJ9-W4-daw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="139"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="138.61607142857142"/>
+        </scene>
+        <!--The Movie App-->
+        <scene sceneID="7aq-Nz-JIp">
+            <objects>
+                <navigationController storyboardIdentifier="RootView" title="The Movie App" automaticallyAdjustsScrollViewInsets="NO" id="5So-2F-MP2" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dXa-Z4-EKf">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="AQR-VH-seU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="POM-gK-bHh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="138.61607142857142"/>
         </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tertiaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
