--- a/TheMovieApp/Features/Home/Cells/MovieCell.xib
+++ b/TheMovieApp/Features/Home/Cells/MovieCell.xib
@@ -16,52 +16,74 @@
                 <rect key="frame" x="0.0" y="0.0" width="390" height="126"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YQr-uV-mtv">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YQr-uV-mtv">
                         <rect key="frame" x="10" y="8" width="110" height="110"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="110" id="DKF-04-V8M"/>
                             <constraint firstAttribute="height" constant="110" id="p2n-cc-W1j"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="da3-Sl-1wY">
-                        <rect key="frame" x="130" y="35" width="250" height="14.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3uz-0x-cjU">
-                        <rect key="frame" x="315" y="87" width="67" height="31"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="31" id="8cN-7R-qtJ"/>
-                            <constraint firstAttribute="width" constant="67" id="RN9-Bd-EVh"/>
-                        </constraints>
-                        <buttonConfiguration key="configuration" style="plain"/>
-                    </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e2w-Oo-eYa">
                         <rect key="frame" x="130" y="8" width="250" height="17"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="da3-Sl-1wY">
+                        <rect key="frame" x="130" y="27" width="250" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="abK-Bn-TLM">
+                        <rect key="frame" x="130" y="101.5" width="95" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ks2-HA-C0w">
+                        <rect key="frame" x="230" y="101.5" width="150" height="14.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="150" id="vJp-gW-g17"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3uz-0x-cjU">
+                        <rect key="frame" x="10" y="10" width="20" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="2c0-dQ-9za"/>
+                            <constraint firstAttribute="width" constant="20" id="2vY-gI-FdP"/>
+                        </constraints>
+                        <buttonConfiguration key="configuration" style="plain"/>
+                    </button>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="Ks2-HA-C0w" secondAttribute="bottom" constant="10" id="0gN-pX-ccu"/>
+                <constraint firstItem="Ks2-HA-C0w" firstAttribute="leading" secondItem="abK-Bn-TLM" secondAttribute="trailing" constant="5" id="HKi-XJ-16Q"/>
                 <constraint firstItem="YQr-uV-mtv" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="MAh-E1-hZj"/>
                 <constraint firstItem="YQr-uV-mtv" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Uke-tH-u5c"/>
+                <constraint firstItem="3uz-0x-cjU" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="UxM-Be-SYV"/>
                 <constraint firstItem="da3-Sl-1wY" firstAttribute="leading" secondItem="YQr-uV-mtv" secondAttribute="trailing" constant="10" id="Weh-pq-NAZ"/>
-                <constraint firstAttribute="trailing" secondItem="e2w-Oo-eYa" secondAttribute="trailing" constant="10" id="YGs-QY-3Jf"/>
-                <constraint firstAttribute="trailing" secondItem="3uz-0x-cjU" secondAttribute="trailing" constant="8" id="biE-C7-KUH"/>
-                <constraint firstAttribute="bottom" secondItem="3uz-0x-cjU" secondAttribute="bottom" constant="8" id="qg8-Ah-wYF"/>
+                <constraint firstAttribute="trailing" secondItem="Ks2-HA-C0w" secondAttribute="trailing" constant="10" id="Xfl-am-wKW"/>
+                <constraint firstItem="abK-Bn-TLM" firstAttribute="leading" secondItem="YQr-uV-mtv" secondAttribute="trailing" constant="10" id="grL-6c-UWZ"/>
+                <constraint firstItem="3uz-0x-cjU" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="p8B-1V-FJ7"/>
+                <constraint firstAttribute="bottom" secondItem="abK-Bn-TLM" secondAttribute="bottom" constant="10" id="pSi-CP-rqD"/>
                 <constraint firstItem="e2w-Oo-eYa" firstAttribute="leading" secondItem="YQr-uV-mtv" secondAttribute="trailing" constant="10" id="rQN-R3-oeJ"/>
                 <constraint firstItem="e2w-Oo-eYa" firstAttribute="top" secondItem="YQr-uV-mtv" secondAttribute="top" id="sEW-lQ-LA8"/>
-                <constraint firstItem="da3-Sl-1wY" firstAttribute="top" secondItem="e2w-Oo-eYa" secondAttribute="bottom" constant="10" id="u4w-av-reH"/>
+                <constraint firstItem="da3-Sl-1wY" firstAttribute="top" secondItem="e2w-Oo-eYa" secondAttribute="bottom" constant="2" id="u4w-av-reH"/>
+                <constraint firstAttribute="trailing" secondItem="e2w-Oo-eYa" secondAttribute="trailing" constant="10" id="vRw-E3-AW2"/>
                 <constraint firstAttribute="trailing" secondItem="da3-Sl-1wY" secondAttribute="trailing" constant="10" id="wbg-pv-MbF"/>
             </constraints>
             <connections>
                 <outlet property="btnFavorite" destination="3uz-0x-cjU" id="u2w-u1-DiA"/>
                 <outlet property="imgArtwork" destination="YQr-uV-mtv" id="zLL-E6-uLp"/>
                 <outlet property="lblDesc" destination="da3-Sl-1wY" id="Wg5-Zy-OgC"/>
+                <outlet property="lblGenre" destination="Ks2-HA-C0w" id="5DI-1T-B1c"/>
+                <outlet property="lblPrice" destination="abK-Bn-TLM" id="Hpj-HW-b1z"/>
                 <outlet property="lblTitle" destination="e2w-Oo-eYa" id="IM3-Ft-uit"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="97.767857142857139"/>
