--- a/TheMovieApp/Features/Main.storyboard
+++ b/TheMovieApp/Features/Main.storyboard
@@ -52,27 +52,49 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="6bB-AI-cb1">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="pvV-A1-ven">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="zFH-8G-YlI">
-                                <rect key="frame" x="20" y="5" width="92" height="34.5"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain"/>
-                            </button>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="6bB-AI-cb1"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="btnArchive" destination="zFH-8G-YlI" id="Ylo-KG-ivM"/>
                         <outlet property="collectionView" destination="pRK-0U-Tcd" id="dKT-iS-Jak"/>
                         <outlet property="lblNotice" destination="ec0-by-2Bu" id="Bi4-Sh-Qa9"/>
                         <outlet property="searchBar" destination="ha0-gl-5QG" id="fJ9-W4-daw"/>
+                        <segue destination="BuQ-9I-gd6" kind="showDetail" identifier="showMovieDetail" id="K8t-fN-LwG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="138.61607142857142"/>
+        </scene>
+        <!--Movie Detail View Controller-->
+        <scene sceneID="lbx-lG-zfP">
+            <objects>
+                <viewController storyboardIdentifier="MovieDetailViewController" id="BuQ-9I-gd6" customClass="MovieDetailViewController" customModule="TheMovieApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Td1-LT-o2t">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="vyR-E2-gUV">
+                                <rect key="frame" x="0.0" y="44" width="414" height="798"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="8cq-NS-m6B"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vyR-E2-gUV" firstAttribute="leading" secondItem="8cq-NS-m6B" secondAttribute="leading" id="128-iu-rSE"/>
+                            <constraint firstItem="8cq-NS-m6B" firstAttribute="bottom" secondItem="vyR-E2-gUV" secondAttribute="bottom" id="6Yq-u4-s1F"/>
+                            <constraint firstItem="vyR-E2-gUV" firstAttribute="top" secondItem="8cq-NS-m6B" secondAttribute="top" id="Ihg-yB-Y4R"/>
+                            <constraint firstItem="8cq-NS-m6B" firstAttribute="trailing" secondItem="vyR-E2-gUV" secondAttribute="trailing" id="ZUE-cF-6kt"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="tYb-Id-lAa"/>
+                    <connections>
+                        <outlet property="tableView" destination="vyR-E2-gUV" id="H7p-ae-Yoi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VXE-SE-5TV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1957" y="139"/>
         </scene>
         <!--The Movie App-->
         <scene sceneID="7aq-Nz-JIp">
