--- a/TheMovieApp/Features/Home/Cells/MovieCell/MovieCell.xib
+++ b/TheMovieApp/Features/Home/Cells/MovieCell/MovieCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,7 +25,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e2w-Oo-eYa">
-                        <rect key="frame" x="130" y="8" width="250" height="17"/>
+                        <rect key="frame" x="130" y="8" width="230" height="17"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -51,10 +52,10 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3uz-0x-cjU">
-                        <rect key="frame" x="10" y="10" width="20" height="30"/>
+                        <rect key="frame" x="365" y="5" width="20" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="2c0-dQ-9za"/>
-                            <constraint firstAttribute="width" constant="20" id="2vY-gI-FdP"/>
+                            <constraint firstAttribute="height" constant="30" id="CMg-82-XJb"/>
+                            <constraint firstAttribute="width" constant="20" id="VyC-op-idb"/>
                         </constraints>
                         <buttonConfiguration key="configuration" style="plain"/>
                     </button>
@@ -63,19 +64,19 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="Ks2-HA-C0w" secondAttribute="bottom" constant="10" id="0gN-pX-ccu"/>
+                <constraint firstItem="3uz-0x-cjU" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="7Ya-VP-0dY"/>
                 <constraint firstItem="Ks2-HA-C0w" firstAttribute="leading" secondItem="abK-Bn-TLM" secondAttribute="trailing" constant="5" id="HKi-XJ-16Q"/>
                 <constraint firstItem="YQr-uV-mtv" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="MAh-E1-hZj"/>
                 <constraint firstItem="YQr-uV-mtv" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Uke-tH-u5c"/>
-                <constraint firstItem="3uz-0x-cjU" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="UxM-Be-SYV"/>
                 <constraint firstItem="da3-Sl-1wY" firstAttribute="leading" secondItem="YQr-uV-mtv" secondAttribute="trailing" constant="10" id="Weh-pq-NAZ"/>
                 <constraint firstAttribute="trailing" secondItem="Ks2-HA-C0w" secondAttribute="trailing" constant="10" id="Xfl-am-wKW"/>
                 <constraint firstItem="abK-Bn-TLM" firstAttribute="leading" secondItem="YQr-uV-mtv" secondAttribute="trailing" constant="10" id="grL-6c-UWZ"/>
-                <constraint firstItem="3uz-0x-cjU" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="p8B-1V-FJ7"/>
+                <constraint firstAttribute="trailing" secondItem="3uz-0x-cjU" secondAttribute="trailing" constant="5" id="iCJ-QO-KwY"/>
                 <constraint firstAttribute="bottom" secondItem="abK-Bn-TLM" secondAttribute="bottom" constant="10" id="pSi-CP-rqD"/>
                 <constraint firstItem="e2w-Oo-eYa" firstAttribute="leading" secondItem="YQr-uV-mtv" secondAttribute="trailing" constant="10" id="rQN-R3-oeJ"/>
                 <constraint firstItem="e2w-Oo-eYa" firstAttribute="top" secondItem="YQr-uV-mtv" secondAttribute="top" id="sEW-lQ-LA8"/>
                 <constraint firstItem="da3-Sl-1wY" firstAttribute="top" secondItem="e2w-Oo-eYa" secondAttribute="bottom" constant="2" id="u4w-av-reH"/>
-                <constraint firstAttribute="trailing" secondItem="e2w-Oo-eYa" secondAttribute="trailing" constant="10" id="vRw-E3-AW2"/>
+                <constraint firstAttribute="trailing" secondItem="e2w-Oo-eYa" secondAttribute="trailing" constant="30" id="vRw-E3-AW2"/>
                 <constraint firstAttribute="trailing" secondItem="da3-Sl-1wY" secondAttribute="trailing" constant="10" id="wbg-pv-MbF"/>
             </constraints>
             <connections>
